--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,6 +12,11 @@
         </div>
         <div class="view-predictions-container">
             <a href="#" id="view-predictions" class="view-predictions-link">View Predictions</a>
+            <select id="location-dropdown" class="form-select w-auto">
+                <option value="">Select Location</option>
+                <option value="export-4B7B6566022D">export-4B7B6566022D</option>
+                <option value="export-4EAAECB6B0E6">export-4EAAECB6B0E6</option>
+            </select>
         </div>
     </div>
 
