--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,9 +13,19 @@
         <div class="view-predictions-container">
             <a href="#" id="view-predictions" class="view-predictions-link">View Predictions</a>
             <select id="location-dropdown" class="form-select w-auto">
-                <option value="">Select Location</option>
+                <option value="">Select Station</option>
                 <option value="export-4B7B6566022D">export-4B7B6566022D</option>
                 <option value="export-4EAAECB6B0E6">export-4EAAECB6B0E6</option>
+                <option value="export-67C711FE46A1">export-67C711FE46A1</option>
+                <option value="export-932208BB5525">export-932208BB5525</option>
+                <option value="export-A9D65F26F0B9">export-A9D65F26F0B9</option>
+                <option value="export-aerosure_wifi">export-aerosure_wifi</option>
+                <option value="export-BB51B17ADB17">export-BB51B17ADB17</option>
+                <option value="export-jsps001">export-jsps001</option>
+                <option value="export-jsps013">export-jsps013</option>
+                <option value="export-jsps016">export-jsps016</option>
+                <option value="export-jsps018">export-jsps018</option>
+                <option value="export-pkk_cha_uat_school">export-pkk_cha_uat_school</option>
             </select>
         </div>
     </div>
