--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -116,7 +116,11 @@
             <span class="forecast-value">35 µg/m³</span>
         </span>
     </div>
+    <!-- แทรก iframe เพื่อแสดง Dash Application -->
+    <iframe src="/dash/" width="100%" height="600px" style="border:none;"></iframe>
 </div>
+
+
 
 
 
