--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="forecast-blocks">
         <span class="forecast-block">
@@ -117,7 +117,21 @@
         </span>
     </div>
     <!-- แทรก iframe เพื่อแสดง Dash Application -->
-    <iframe src="/dash/" width="100%" height="600px" style="border:none;"></iframe>
+    <iframe id="dash-iframe" src="/dash/" width="100%" height="600px" style="border:none;"></iframe>
+
+    <!-- Add JavaScript to update the iframe src when station changes -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const dropdown = document.getElementById('location-dropdown');
+            const iframe = document.getElementById('dash-iframe');
+
+            // Update iframe src when dropdown changes
+            dropdown.addEventListener('change', function () {
+                const selectedStation = dropdown.value || 'export-4B7B6566022D';
+                iframe.src = `/dash/?station=${selectedStation}`;
+            });
+        });
+    </script>
 </div>
 
 
